name:                RaspberryPi-Mailbox
version:             0.1.0.0
synopsis:            RaspberryPi Mailbox
description:         Please see README.md
homepage:            https://github.com/notogawa/RaspberryPi-Mailbox#readme
license:             BSD3
license-file:        LICENSE
author:              Noriyuki OHKAWA
maintainer:          n.ohkawa@gmail.com
copyright:           2017 Noriyuki OHKAWA
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RaspberryPi.Mailbox
  other-modules:       System.Posix.MMap
  build-depends:       base >= 4.6 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/notogawa/RaspberryPi-Mailbox
