name:                RaspberryPi-Mailbox
version:             0.1.0.0
synopsis:            RaspberryPi Mailbox
description:         Please see README.md
homepage:            https://github.com/notogawa/RaspberryPi-Mailbox#readme
license:             BSD3
license-file:        LICENSE
author:              Noriyuki OHKAWA
maintainer:          n.ohkawa@gmail.com
copyright:           2017 Noriyuki OHKAWA
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:  cbits/system_posix_mmap.h
                     cbits/raspberrypi_mailbox.h

library
  hs-source-dirs:      src
  exposed-modules:     RaspberryPi.Mailbox
  other-modules:       System.Posix.MMap
  build-depends:       base >= 4.6 && < 5
                     , unix
                     , ioctl
  default-language:    Haskell2010
  ghc-options:         -Wall
  -- for raspbian jessie (ghc 7.6)
  default-extensions:  DeriveDataTypeable
  hs-source-dirs:      .
  include-dirs:        cbits
  c-sources:           cbits/system_posix_mmap.c
                       cbits/raspberrypi_mailbox.c

source-repository head
  type:     git
  location: https://github.com/notogawa/RaspberryPi-Mailbox
